# clamir-linux-server-ctrl-tcp

./: CMakeLists.txt  application-build.sh  application-debug.sh  application-deploy.sh  application-launch.sh
include/: application.hpp  service.hpp
share/: systemd-template.socket.in  systemd-template@.service.in
src/: main.cpp
